force-app/main/default/objects/TRG_TriggerActivationSettings__c/TRG_TriggerActivationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This settings will allow to define if triggers, flows, validation rules must be activated or not.</description>
    <label>TRG Trigger Activation Settings</label>
</CustomObject>