force-app/main/default/objects/TRG_TriggerActivationSettings__c/fields/TRG_Disable_All_Flows__c.field-meta.xml
<CustomField>
    <fullName>TRG_Disable_All_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable All Flows</label>
    <type>Checkbox</type>
</CustomField>