force-app/main/default/objects/TRG_TriggerActivationSettings__c/fields/TRG_Disable_All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>TRG_Disable_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, all he triggers will be disabled independently of those listed in the Disable Trigger List</inlineHelpText>
    <label>Disable All Triggers</label>
    <type>Checkbox</type>
</CustomField>