force-app/main/default/objects/TRG_TriggerActivationSettings__c/fields/TRG_Disable_All_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>TRG_Disable_All_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable All Validation Rules</label>
    <type>Checkbox</type>
</CustomField>