force-app/main/default/objects/TRG_TriggerActivationSettings__c/fields/TRG_Persistent_Debug_Logs__c.field-meta.xml
<CustomField>
    <fullName>TRG_Persistent_Debug_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this checkbox to true if you want to see the Trigger Info in the LOG Message table as Debug Level.</inlineHelpText>
    <label>Persistent Debug Logs</label>
    <type>Checkbox</type>
</CustomField>