force-app/main/default/objects/TRG_TriggerActivationSettings__c/fields/TRG_Triggers_To_Disable_List__c.field-meta.xml
<CustomField>
    <fullName>TRG_Triggers_To_Disable_List__c</fullName>
    <inlineHelpText>List the trigger names to be disabled, separated by a semicolon.</inlineHelpText>
    <label>Triggers To Disable List</label>
    <type>TextArea</type>
</CustomField>